# GitOSINT-mcp

./: .gitignore  AUTHORS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  install.sh  poc.py  pyproject.toml  requirements.txt
.github/workflows/: ci-mcp.yml
core/: network.py
docs/: quick-start.md
modules/: bitbucket.py  gitea.py  github.py  gitlab.py
src/gitosint/: gitosint.py
src/gitosint/modules/: github.py
src/gitosint_mcp/: __init__.py  cli.py  config.py  server.py
src/gitosint_mcp/analyzers/: __init__.py  repository.py  social_mapper.py
src/gitosint_mcp/intelligence/: email_discovery.py
src/gitosint_mcp/security/: __init__.py  scanner.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integration.py
tests/mcp/: __init__.py  test_mcp_protocol.py
tests/unit/: __init__.py  basic.py  cli.py  test_config.py  test_repository_analyzer.py  test_server.py
